--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
   <body>
     <div class="container">
       <div class="logo">
-        <img class="google-logo" src="http://i.kinja-img.com/gawker-media/image/upload/s--pEKSmwzm--/c_scale,fl_progressive,q_80,w_800/1414228815325188681.jpg"/>
+        <img
+          class="google-logo"
+          src="http://i.kinja-img.com/gawker-media/image/upload/s--pEKSmwzm--/c_scale,fl_progressive,q_80,w_800/1414228815325188681.jpg"
+        />
       </div>
       <div class="searchform">
-        <input type="text" class="search"/>
+        <input type="text" class="search" />
       </div>
       <div class="buttons">
         <button>Google Search</button>
-        <button>I;m Feeling Lucky</button>
+        <button>I'm Feeling Lucky</button>
         <p>Google.com offered in: <a href="#">Hindi</a></p>
       </div>
       <div class="footer">
-
         <span class="footer-left">
           <a href="#">Advertising</a>
           <a href="#">Business</a>
@@ -34,11 +36,104 @@
           <a href="#">Terms</a>
           <a href="#">Settings</a>
         </span>
-        
       </div>
     </div>
   </body>
   <style>
-    
+    .container {
+      text-align: center;
+      width: 100%;
+      height: auto;
+      margin: 0 auto;
+      /* padding-top:130px; */
+    }
+
+    .logo {
+      background: url(/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png);
+      margin-top: 150px;
+    }
+
+    .google-logo {
+      width: 300px;
+    }
+
+    input {
+      width: 400px;
+      height: 30px;
+      margin-bottom: 15px;
+      border: 1px solid #dfe1e5;
+      box-shadow: none;
+      border-radius: 24px;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    p {
+      font-family: arial;
+      font-size: 9pt;
+    }
+
+    .footer a {
+      color: #757575;
+      padding: 5px;
+      font-size: 10pt;
+    }
+
+    .footer {
+      background: #f2f2f2;
+      font-family: arial;
+      padding: 5px;
+      bottom: 0;
+      position: fixed;
+      width: 100%;
+      left: -5px;
+    }
+
+    .footer:after {
+      display: block;
+      clear: both;
+      content: "";
+      height: 0;
+      overflow: hidden;
+    }
+
+    .footer-left {
+      float: left;
+    }
+    .footer-right {
+      float: right;
+    }
+
+    button {
+      background-image: -webkit-linear-gradient(top, #f8f9fa, #f8f9fa);
+      background-color: #f8f9fa;
+      border: 1px solid #f8f9fa;
+      border-radius: 4px;
+      color: #3c4043;
+      font-family: arial, sans-serif;
+      font-size: 14px;
+      margin: 11px 4px;
+      padding: 0 16px;
+      line-height: 27px;
+      height: 36px;
+      min-width: 54px;
+      text-align: center;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    button:hover {
+      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+      background-image: -webkit-linear-gradient(top, #f8f9fa, #f8f9fa);
+      background-color: #f8f9fa;
+      border: 1px solid #dadce0;
+      color: #202124;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </html>
