--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
     <div class="container">
+      <div class="nav">
+        <span class="header-left">
+          <a href="#">Gmail</a>
+          <a href="#">Images</a>          
+        </span>
+      </div>
       <div class="logo">
         <img
           class="google-logo"
@@ -79,6 +85,20 @@
       color: #757575;
       padding: 5px;
       font-size: 10pt;
+    }
+
+    .nav {
+      font-family: arial;
+      padding: 5px;
+      bottom: 0;
+      width: 100%;
+      display : flex;
+      justify-content: flex-end;
+    }
+    .nav a{
+      color: rgba(0,0,0,0.87);
+      font-size: 13px;
+      margin-right: 10px;
     }
 
     .footer {
